force-app/main/default/objects/Stock_Audit_Line_Item__c/Stock_Audit_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Stock Audit Line Item</label>
    <nameField>
        <displayFormat>Item-{00}</displayFormat>
        <label>Stock Audit Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Audit Line Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>