force-app/main/default/objects/Stock_Audit_Line_Item__c/fields/Orl_Actual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Orl_Actual_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>