force-app/main/default/objects/Stock_Audit_Line_Item__c/fields/Orl_Expected_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Orl_Expected_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expected Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>