force-app/main/default/objects/Stock_Audit_Line_Item__c/fields/Orl_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Orl_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>cgcloud__Inventory__c</referenceTo>
    <relationshipLabel>Stock Audit Line Items</relationshipLabel>
    <relationshipName>Stock_Audit_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>