force-app/main/default/objects/Stock_Audit_Line_Item__c/fields/Orl_Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>Orl_Inventory_Type__c</fullName>
    <label>Inventory Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>