force-app/main/default/objects/Stock_Audit_Line_Item__c/fields/Orl_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Orl_Product_Name__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>