force-app/main/default/objects/Stock_Audit_Line_Item__c/fields/Orl_Stock_Audit__c.field-meta.xml
<CustomField>
    <fullName>Orl_Stock_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Audit</label>
    <referenceTo>Stock_Audit__c</referenceTo>
    <relationshipLabel>Stock Audit Line Items</relationshipLabel>
    <relationshipName>Stock_Audit_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>